[gd_scene load_steps=13 format=1]

[ext_resource path="res://gas.gd" type="Script" id=1]
[ext_resource path="res://gas/gas-01.png" type="Texture" id=2]
[ext_resource path="res://gas/gas-02.png" type="Texture" id=3]
[ext_resource path="res://gas/gas-03.png" type="Texture" id=4]
[ext_resource path="res://gas/happy-01.png" type="Texture" id=5]
[ext_resource path="res://gas/happy-02.png" type="Texture" id=6]
[ext_resource path="res://gas/happy-03.png" type="Texture" id=7]
[ext_resource path="res://fonts/main-text.fnt" type="BitmapFont" id=8]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 15.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "happy",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( -2.14355, -1.93187 ),
"update": 0,
"values": [ -15.0, 15.0 ]
}

[sub_resource type="Animation" id=4]

resource/name = "tutorial"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("instructions:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 5.3, 5.4, 5.5, 5.6, 5.7, 5.8, 5.9 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false ]
}

[node name="gas" type="KinematicBody2D"]

visibility/behind_parent = true
transform/rot = 12.4454
input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 0, 20 )
transform/rot = 8.53774e-07
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1.54198, 0, 0, 2.75717, -0.766382, 1.50373 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

transform/pos = Vector2( -0.766382, 1.50373 )
transform/scale = Vector2( 1.54198, 2.75717 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

transform/pos = Vector2( -1.18598, 20.8864 )
frames = SubResource( 2 )
animation = "default"
playing = true

[node name="wobbleAnimation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/default = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "default"

[node name="tutorialAnimation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/tutorial = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "tutorial"

[node name="killTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 15.0
one_shot = true
autostart = true

[node name="startTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="instructions" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -43.0
margin/top = -61.0
margin/right = 44.0
margin/bottom = -15.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -4
custom_constants/shadow_as_outline = 1
text = "Catch me
for FUEL!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Particles2D" type="Particles2D" parent="."]

transform/pos = Vector2( -0.579465, 37.5003 )
z/z = -1
config/amount = 60
config/lifetime = 0.5
config/emit_timeout = 0.1
config/emitting = false
config/process_mode = 1
config/local_space = false
config/explosiveness = 0.3
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 100.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 5.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[connection signal="body_enter" from="Area2D" to="." method="collision_detected"]

[connection signal="timeout" from="killTimer" to="." method="kill"]

[connection signal="timeout" from="startTimer" to="." method="start_animation"]


